<resources>
    <string name="app_name">Z Delivery</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file">file</string>

    <string name="q1">Q.1 What is this app?</string>
    <string name="a1">A.1 Z Delivery is a food delivery service that does Home Deliveries to it\'s customers, from over 200 restaurants / outlets in Pune, Pimpri-Chinchwad and Navi-Mumbai.
We are one of INDIA\'s premier Home Delivery Service.Operational since 1998, we have served over 75,000 people so far.</string>

    <string name="q2">Q.2 How does this app charge you?</string>
    <string name="a2">A.2 This app charges you only the BILL VALUE - as raised by the Restaurant - and in most cases, DOES NOT charge any delivery charges.</string>

    <string name="q3">Q.3 Are the prices listed accurate and binding?</string>
    <string name="a3">A.3 We make every effort to keep the prices updated and accurate. Prices listed on this website are however approximate and subject to changes by the Restaurant and Taxes.
The final price is as per the ACTUAL BILL raised by the Restaurant and presented to you, at the time of the delivery.</string>

    <string name="q4">Q.4 Can i get discounts on big orders?</string>
    <string name="a4">A.4 Sorry, as a practice we do not give discounts as we work on very slim margins, already.
    But, we could check with the Restaurant - and IF they offer any special discount, we\'d be happy to pass it on to you!</string>

    <string name="q5">What modes of payment are acceptable?</string>
    <string name="signup"><u>Don\'t have an account? Sign up now</u></string>
    <string name="forget_password"><u>Forgot Password?</u></string>

</resources>
