<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragment.FaqsFragment"
    android:layout_margin="22dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#05a5fc"
            android:paddingTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a1"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:textColor="#0a0a0a"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#05a5fc"
            android:paddingTop="25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a2"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:textColor="#0a0a0a"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#05a5fc"
            android:paddingTop="25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a3"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:textColor="#0a0a0a"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#05a5fc"
            android:paddingTop="25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="185dp"
            android:paddingTop="8dp"
            android:text="@string/a4"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />


    </LinearLayout>


</ScrollView>